	  to the server.  It is logged to the log file.  Affected file
	  is silcd/protocol.c.

	* Fixed the KILLED notify handling in the client library.  The
	  client must be removed from all channels when receiving the
	  KILLED notify.

	  Also, do not remove the client entry when giving the KILL 
	  command but when the KILLED notify is received.

Mon Mar 26 12:11:14 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added silc_server_send_notify_invite to send the INVITE
	  notify between routers.

	* Implemented the INVITE command correctly to the server.

	* Implemented the INVITE notify type handling in the server.

	* Implemented the INVITE command to the client library and on the
	  user interface.

Sun Mar 25 20:27:09 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added function silc_server_get_client_resolve to find the
	  client entry by ID from all ID lists and then resolve it
	  (using WHOIS) if it cannot be found.  Affected file is
	  silcd/server.[ch].

Sun Mar 25 13:52:51 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Implemented the BAN command to the client library.

	* The JOIN command in the server now checks the invite list
	  and the ban list.

	* Changed the silc_command_reply_payload_encode_va and the
	  silc_command_payload_encode_va to support that if argument is
	  NULL it ignores and checks the next argument.  Affected file
	  lib/silccore/silccommand.c.

	* Added silc_server_send_notify_ban to send the BAN notify
	  type between routers.

	* Chaned the silc_notify_payload_encode to support that if 
	  argument is NULL it ignores and checks the next argument.
	  Affected file lib/silccore/silcnotify.c.

	* Tested ban lists in router environment successfully.

Sat Mar 24 14:47:25 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Implemented BAN command to the server, in silcd/command.[ch].

	* Removed the BAN and INVITE_LIST modes from the CMODE command
	  in the server code.
