@@ -102,8 +102,6 @@ TODO In SILC Server
 
  o TODO in commands (command.c and command_reply.c):
 
-	o WHOIS <count> argument is probably ignored
-	o IDENTIFY <count> argument is probably ignored
 	o RESTART is not implemented
 	o CMODE should be rewritten as it uses a lot duplicated code.
 	  Some of the modes may still not be implemented or is implemented
@@ -117,8 +115,22 @@ TODO In SILC Server
 
  o TODO in notify types (packet_receive.c):
 
-	o CHANNEL_CHANGE notify type is not implemented
 	o SERVER_SIGNOFF notify type is not implemented
+
+ o TODO in authentication protocol (protocol.c):
+
+	o Public key authentication is missing in initiator side.  It must
+	  be implemented by creating the authentication data.
+
+ o TODO in general server (server.c)
+
+	o SILC_PACKET_CONNECTION_AUTH_REQUEST packet type is not
+	  implemented.
+
+	o silc_server_connect_to_router_second checks the authentication
+	  method to be used in the connection.  However, if it does not
+	  find it it must resolve it from the responder by sending the
+	  SILC_PACKET_CONNECTION_AUTH_REQUEST packet.
 
  o Packet processing can be made faster. All packet function in the
    packet_receive.c has same prototypes.  Instead of calling those from
@@ -145,6 +157,9 @@ TODO In SILC Server
 
  o Connection classes should be actually implemented in serverconfig.c.
    They can be defined but they are totally ignored currently.
+
+ o Connection redirect, if server is full, is not implemented.  I also
+   don't know how to do it currently.  Maybe it shouldn't be done at all.
 
 
 TODO In SILC Libraries
