@@ -502,10 +502,6 @@ silc_idlist_get_clients_by_hash(SilcIDList id_list, char *nickname,
 				SilcHash md5hash,
 				unsigned int *clients_count);
 SilcClientEntry
-silc_idlist_find_client_by_nickname(SilcIDList id_list, char *nickname,
-				    char *server,
-				    SilcIDCacheEntry *ret_entry);
-SilcClientEntry
 silc_idlist_find_client_by_hash(SilcIDList id_list, char *nickname,
 				SilcHash md5hash, SilcIDCacheEntry *ret_entry);
 SilcClientEntry
